# workflow-testbed

./: README.md  cargo.toml
.github/: release-drafter.yml
.github/workflows/: pr-to-master.yml  publish.yml  release-cargo.yml  release-drafter.yml  release-npm.yml  release.push-to-master.yml  release.yml  test.yml  trigger-update-docs.yml
cli/tauri-cli/: Cargo.toml  cargo.toml
cli/tauri.js/: package.json
tauri/: Cargo-broken.toml  Cargo.toml  cargo.toml
